yaml_parser/tests/fail/invalid-scalar-at-the-end-of-sequence.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 4, column 2
  |
4 |  invalid
  |  ^
expected `...`
